# ankify

./: .env.example  README.md  fastmcp.json  pyproject.toml
docs/: Anki_note_types.md  CLI.md  aws-lambda-deep-dive.md  mcp-http-transport-options.md
infra/cdk/stacks/: ankify_stack.py
infra/docker/: Dockerfile
settings/: dev_test.yaml  english_russian.yaml  german2english.yaml
settings/prompts/: prompt_template.md.j2
settings/prompts/custom_instructions/: english_russian_c1.md  german_english_b1.md
settings/prompts/few_shot_examples/forward_and_backward_german_english_b1/: 1.tsv  1.txt  2025.10.01_09:05:50.tsv  2025.10.01_09:05:50.txt  2025.10.02_21:04:29.tsv  2025.10.02_21:04:29.txt  2025.10.04_10:17:36.tsv  2025.10.04_10:17:36.txt  2025.10.05_15:05:15.tsv  2025.10.05_15:05:15.txt  2025.10.06_18:02:11.tsv  2025.10.06_18:02:11.txt  2025.10.07_10:40:41.tsv  2025.10.07_10:40:41.txt  2025.10.09_20:53:33.tsv  2025.10.09_20:53:33.txt  2025.10.11_15:51:38.tsv  2025.10.11_15:51:38.txt
settings/prompts/few_shot_examples/forward_only_english_russian_c1/: 1.tsv  1.txt  2025.10.02_21:05:42.tsv  2025.10.02_21:05:42.txt  2025.10.05_15:36:07.tsv  2025.10.05_15:36:07.txt  2025.10.06_18:28:41.tsv  2025.10.06_18:28:41.txt  2025.10.09_21:25:25.tsv  2025.10.09_21:25:25.txt
src/anker/: pipeline.py  settings.py
src/anker/llm/: llm_base.py  llm_factory.py  openai_llm.py  prompt_builder.py
src/anker/tts/: _test_aws_tts_ssml.py  _test_openai_tts_ssml.py  aws_tts.py  tts_manager.py
src/ankify/: settings.py
src/ankify/llm/: jinja2_prompt_formatter.py  llm_base.py  llm_cost_tracker.py  openai_llm.py  prompt_builder.py
src/ankify/mcp/: ankify_mcp_server.py  demo_client.py
src/ankify/resources/: language_aliases.json
src/ankify/resources/prompts/: mcp_prompt_template.md.j2
src/ankify/resources/prompts/language_specific/: arabic.md  cantonese.md  chinese.md  danish.md  dutch.md  english.md  french.md  german.md  italian.md  norwegian.md  portuguese.md  russian.md  spanish.md  swedish.md  turkish.md
src/ankify/resources/tts/: tts_defaults_aws.json  tts_defaults_azure.json  tts_defaults_edge.json
src/ankify/tts/: aws_tts.py  azure_tts.py  default_tts_configuration.py  edge_tts.py  tts_base.py  tts_cost_tracker.py  tts_manager.py
