[project]
name = "ankify"
version = "0.1.0"
description = "Arbitrary text to Anki deck with text-to-speech audio"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openai",
    "boto3",
    "edge-tts",
    "genanki",
    "pydantic",
    "pydantic-settings",
    "tenacity",
    "python-dotenv",
    "pyyaml",
    "rich",
    "jinja2",
    "mcp",
    "azure-cognitiveservices-speech",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "mlflow",
]

[project.scripts]
ankify = "ankify.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/ankify"]
include = [
  "src/ankify/anki/templates/*.html",
  "src/ankify/anki/templates/*.css",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/ankify/anki/templates/*.html",
  "src/ankify/anki/templates/*.css",
]
