[project]
name = "ankify"
version = "0.1.0"
description = "Arbitrary text to Anki deck with text-to-speech audio"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Core - always needed
    "genanki",
    "pydantic",
    "pydantic-settings",
    "tenacity",
    "python-dotenv",
    "jinja2",
    "mcp",
    # Default TTS for FastMCP Cloud (reads only base deps)
    "azure-cognitiveservices-speech",
]

[project.optional-dependencies]
# CLI tools (openai for LLM, pyyaml for config, rich for console)
cli = ["openai", "pyyaml", "rich"]
# TTS providers
tts-azure = ["azure-cognitiveservices-speech"]
tts-aws = ["boto3"]
tts-edge = ["edge-tts"]
# Local MCP with free edge-tts
local-mcp = ["ankify[tts-edge]"]
# Full local: CLI + all TTS providers
local-all = ["ankify[cli,tts-aws,tts-edge,tts-azure]"]
# Development tools
dev = ["pytest", "ruff", "mypy", "mlflow"]

[project.scripts]
ankify = "ankify.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/ankify"]
include = [
  "src/ankify/anki/templates/*.html",
  "src/ankify/anki/templates/*.css",
  "src/ankify/resources/*.json",
  "src/ankify/resources/prompts/*.j2",
  "src/ankify/resources/prompts/language_specific/*.md",
  "src/ankify/resources/tts/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/ankify/anki/templates/*.html",
  "src/ankify/anki/templates/*.css",
  "src/ankify/resources/*.json",
  "src/ankify/resources/prompts/*.j2",
  "src/ankify/resources/prompts/language_specific/*.md",
  "src/ankify/resources/tts/*.json",
]
